Implemented Projects:     Multiple Projects can be Added/Deleted. Workitems are nested inside the project object so removed WorkItems Collection from DB.
Created EditableTextBlock:
    Created a general UserControl that can be used to simply display text alongwith a ToggleButton that enables Editing of said Text. Keyboard actions Enter/Escape are implemented. An Event fires when text is successfully changed

Will start work on proper ChangeLog now

--- a/App.config
+++ b/App.config
@@ -13,6 +13,9 @@
             <setting name="DefaultDatabaseLocation" serializeAs="String">
                 <value />
             </setting>
+            <setting name="LastOpenedProject" serializeAs="String">
+                <value />
+            </setting>
         </Kanaban.Properties.Settings>
     </userSettings>
 </configuration>
