--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="DefaultDatabaseLocation" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="LastOpenedProject" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
